--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-  <a class="navbar-brand" href="/">GuessIT!</a>
+  <a class="navbar-brand" href="/">A Leauge</a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -9,8 +9,16 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
         <a class="nav-link" href="/">Home</a>
+      </li>      
+      <li class="nav-item">
+        <a class="nav-link" href="/">About</a>
       </li>
-
+      <li class="nav-item">
+        <a class="nav-link" href="/">Teams</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/">Create</a>
+      </li>    
       <% if (authorized) { %>
         
       <% } %>
