--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,19 +6,13 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav mr-auto">                
       <li class="nav-item">
-        <a class="nav-link" href="/">Home</a>
-      </li>      
-      <li class="nav-item">
-        <a class="nav-link" href="/">About</a>
+        <a class="nav-link" href="/teams">Teams</a>
+        <li class="nav-item">
+          <a class="nav-link" href="/teams/new">Create</a>
+        </li>   
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/">Teams</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/">Create</a>
-      </li>    
       <% if (authorized) { %>
         
       <% } %>
